# hippocrates

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SKILL.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/plans/: fix-lint-errors.md  v1.6-update.md
engine-python/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  smoke-test.ps1
engine-python/app/: __init__.py  config.py  main.py  models.py
engine-python/app/analyzers/: __init__.py  content_risk.py  obfuscation_advanced.py  prompt_injection.py
engine-python/tests/: __init__.py  test_analyzers.py  test_api.py
example/: package.json
example/app/api/data/: route.ts
src/: index.ts
src/__tests__/: decoy.test.ts  ensure-strict.test.ts  helpers.ts  ip.test.ts  ml-engine-integration.test.ts  redis-degradation.test.ts  stats-integration.test.ts  stats.test.ts  threat-score-engine.test.ts  validate-payload.test.ts  with-hippocrates.test.ts
src/engine/: analyzers.ts  constants.ts  threat-score-engine.ts  types.ts
src/plugins/: ml-engine.ts
src/system/: honeypot.ts  pipeline.ts  validator.ts
src/utils/: ip.ts
